--- a/Heart risk/main.ipynb
+++ b/Heart risk/main.ipynb
@@ -43,7 +43,7 @@
     "weights=np.zeros(feature.shape[1])\n",
     "bias=0\n",
     "learning_rate=0.01\n",
-    "iteration=10000"
+    "iteration=1000"
    ]
   },
   {
@@ -55,16 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 0: Loss = 0.04455445544554455\n",
-      "Iteration 1000: Loss = 0.004272598592520888\n",
-      "Iteration 2000: Loss = 0.00160133542242824\n",
-      "Iteration 3000: Loss = 0.0005986717966869488\n",
-      "Iteration 4000: Loss = 0.00022362803980472453\n",
-      "Iteration 5000: Loss = 8.35085514769045e-05\n",
-      "Iteration 6000: Loss = 3.118076580286384e-05\n",
-      "Iteration 7000: Loss = 1.164191588701519e-05\n",
-      "Iteration 8000: Loss = 4.346657045882821e-06\n",
-      "Iteration 9000: Loss = 1.6228701457117967e-06\n"
+      "Iteration 0: Loss = 0.04455445544554455\n"
      ]
     }
    ],
@@ -89,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 85.15%\n"
+      "Accuracy: 84.82%\n"
      ]
     }
    ],
@@ -101,6 +92,86 @@
     "# Compute the accuracy of the model\n",
     "accuracy = np.mean(pred_labels == labels)\n",
     "print('Accuracy: {:.2f}%'.format(accuracy * 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras \n",
+    "from tensorflow.keras import layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "10/10 [==============================] - 1s 2ms/step - loss: 0.5503 - binary_accuracy: 0.7426\n",
+      "Epoch 2/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.3652 - binary_accuracy: 0.8449\n",
+      "Epoch 3/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.3215 - binary_accuracy: 0.8746\n",
+      "Epoch 4/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.2862 - binary_accuracy: 0.8812\n",
+      "Epoch 5/20\n",
+      "10/10 [==============================] - 0s 4ms/step - loss: 0.2615 - binary_accuracy: 0.8878\n",
+      "Epoch 6/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.2317 - binary_accuracy: 0.9241\n",
+      "Epoch 7/20\n",
+      "10/10 [==============================] - 0s 2ms/step - loss: 0.2169 - binary_accuracy: 0.9142\n",
+      "Epoch 8/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1907 - binary_accuracy: 0.9373\n",
+      "Epoch 9/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1670 - binary_accuracy: 0.9505\n",
+      "Epoch 10/20\n",
+      "10/10 [==============================] - 0s 4ms/step - loss: 0.1432 - binary_accuracy: 0.9604\n",
+      "Epoch 11/20\n",
+      "10/10 [==============================] - 0s 4ms/step - loss: 0.1215 - binary_accuracy: 0.9670\n",
+      "Epoch 12/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1015 - binary_accuracy: 0.9802\n",
+      "Epoch 13/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.0891 - binary_accuracy: 0.9835\n",
+      "Epoch 14/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.0762 - binary_accuracy: 0.9769\n",
+      "Epoch 15/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.0569 - binary_accuracy: 0.9868\n",
+      "Epoch 16/20\n",
+      "10/10 [==============================] - 0s 6ms/step - loss: 0.0481 - binary_accuracy: 0.9934\n",
+      "Epoch 17/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.0383 - binary_accuracy: 0.9934\n",
+      "Epoch 18/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.0309 - binary_accuracy: 0.9934\n",
+      "Epoch 19/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.0226 - binary_accuracy: 0.9967\n",
+      "Epoch 20/20\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.0191 - binary_accuracy: 0.9934\n"
+     ]
+    }
+   ],
+   "source": [
+    "model=keras.Sequential(\n",
+    "    [layers.Dense(250,activation=\"relu\"),layers.Dense(250,activation=\"relu\"),layers.Dense(100,activation=\"relu\"),layers.Dense(1,activation=\"sigmoid\")]\n",
+    "    )\n",
+    "model.compile(\n",
+    "    optimizer=keras.optimizers.Adam(),  # Optimizer\n",
+    "    # Loss function to minimize\n",
+    "    loss=keras.losses.BinaryCrossentropy(),\n",
+    "    # List of metrics to monitor\n",
+    "    metrics=[keras.metrics.BinaryAccuracy()],\n",
+    ")\n",
+    "\n",
+    "x=np.array(features)\n",
+    "y=np.array(labels)\n",
+    "model=model.fit(x,y,epochs=20)\n"
    ]
   }
  ],
